[workspace]
members = [
	"encryption",
	"client",
	"server"
]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["net", "io-util", "macros", "rt-multi-thread", "sync", "signal"] }
tun = "0.7"
etherparse = "0.19.0"
rand = "0.9.2"
anyhow = "1.0.100"
env_logger = "0.11.8"
log = { version = "0.4.28", features = ["max_level_debug"] }
ringbuf = "0.4.8"
